feat: add name storage

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Simple Timer</h1>
     <h2 id="current-time"></h2>
+    <h2 id="user-name"></h2>
   </body>
   <script src="popup.js"></script>
 </html>
