--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
     <h1>Simple Timer</h1>
     <h2 id="current-time"></h2>
     <h2 id="user-name"></h2>
+    <h2 id="timer-text"></h2>
   </body>
   <script src="popup.js"></script>
 </html>
