--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,9 @@
     <h2 id="current-time"></h2>
     <h2 id="user-name"></h2>
     <h2 id="timer-text"></h2>
+    <button id="start-btn">Start Timer</button>
+    <button id="stop-btn">Stop Timer</button>
+    <button id="reset-btn">Reset Timer</button>
   </body>
   <script src="popup.js"></script>
 </html>
